--- a/Projeto Web/tra-main/html/index.html
+++ b/Projeto Web/tra-main/html/index.html
@@ -14,7 +14,7 @@
         <h1 class="fs-1 p-2">DAY BUY</h1>
         
         <div class="d-flex gap-5 justify-content-center align-items-center" style="width: 100%; max-width: 1000px;">
-          <div class="input-group w-100" style="max-width: 600px;">
+          <div class="input-group w-100" style="max-width: 300px;">
             <input class="form-control" type="search" placeholder="Pesquisar produtos" aria-label="Pesquisar">
             <button class="btn btn-dark" type="submit">🔍</button>
           </div>
@@ -22,10 +22,11 @@
 
     <div class="d-flex gap-5">
         <div class="p-2">
-          <a href=""><img src="configurações.png" alt="ícone de configurações"></a>
+          <a href="/tra-main/html/config.html"><img src="/tra-main/pictures/configurações.png" alt="ícone de configurações"></a>
         </div>
         <div class="p-2">
-          <a href=""><img src="conta.png" alt="ícone de conta"></a>
+          
+          <a href="/tra-main/html/login.html"><img src="/tra-main/pictures/conta.png" alt="ícone de conta"></a>
         </div>
     </div>
 
